Creacion de Splash

--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/dimens.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/dimens.xml
@@ -2,7 +2,11 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="padding_medium">8dp</dimen>
-    <dimen name="padding_small">4dp</dimen>
-    <dimen name="padding_extra_small">2dp</dimen>
+    <dimen name="paddTopBottomImg">16dp</dimen>
+    <dimen name="dimenNomSistema">25sp</dimen>
+    <dimen name="dimenNomPagina">20sp</dimen>
+    <dimen name="padding_medium">20sp</dimen>
+    <dimen name="padding_small">20sp</dimen>
+    <dimen name="padding_extra_small">20sp</dimen>
+
 </resources>
