--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/fragment_usuario_add_dialog.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/fragment_usuario_add_dialog.xml
@@ -3,6 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/padding_extra_large"
+    android:paddingLeft="@dimen/padding_extra_large"
+    android:paddingRight="@dimen/padding_extra_large"
+    android:paddingTop="@dimen/padding_extra_large"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.UsuarioAddDialogFragment">
 
     <LinearLayout
@@ -13,7 +17,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_small"
+            android:layout_marginRight="@dimen/padding_extra_small"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -21,6 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/padding_small"
+                android:layout_marginTop="@dimen/padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -44,7 +49,7 @@
                     android:paddingRight="@dimen/padding_medium">
 
                     <EditText
-                        android:id="@+id/edtx_usu_add_nombres"
+                        android:id="@+id/usu_add_etx_nom"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Nombres" />
@@ -79,7 +84,7 @@
                     android:paddingRight="@dimen/padding_medium">
 
                     <EditText
-                        android:id="@+id/edtx_usu_add_email"
+                        android:id="@+id/usu_add_etx_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="E-mail"
@@ -91,7 +96,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/padding_small"
                 android:layout_marginTop="@dimen/padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
@@ -116,7 +120,7 @@
                     android:paddingRight="@dimen/padding_medium">
 
                     <EditText
-                        android:id="@+id/edtx_usu_add_password"
+                        android:id="@+id/usu_add_etx_pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Password"
@@ -130,7 +134,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/padding_small"
+            android:layout_marginLeft="@dimen/padding_extra_small"
             android:layout_weight="1"
             android:orientation="vertical">
 
@@ -162,7 +166,7 @@
                     android:paddingRight="@dimen/padding_medium">
 
                     <EditText
-                        android:id="@+id/edtx_usu_add_apellidos"
+                        android:id="@+id/usu_add_etx_ape"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Apellidos" />
@@ -198,7 +202,7 @@
                     android:paddingRight="@dimen/padding_medium">
 
                     <EditText
-                        android:id="@+id/edtx_usu_add_dni_alumno"
+                        android:id="@+id/usu_add_etx_dni_alum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Dni del Alumno"
@@ -236,7 +240,7 @@
                     android:paddingRight="@dimen/padding_medium">
 
                     <EditText
-                        android:id="@+id/edtx_usu_add_pass_conf"
+                        android:id="@+id/usu_add_etx_pass_conf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="Confirmar Password"
@@ -256,7 +260,7 @@
         android:layout_marginTop="@dimen/padding_medium">
 
         <Button
-            android:id="@+id/btn_usu_add_registarse"
+            android:id="@+id/usu_add_btn_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/side_item_layout_componet_small"
