--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_usuario_add_dialog.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_usuario_add_dialog.xml
@@ -1,8 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.UsuarioAddDialogFragment">
 
 
@@ -21,9 +25,9 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:tint="@color/colorTextIcons"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_icon_user" />
+                android:src="@drawable/ic_icon_user"
+                android:tint="@color/colorTextIcons" />
         </LinearLayout>
 
         <LinearLayout
@@ -33,7 +37,7 @@
             android:paddingRight="@dimen/padding_medium">
 
             <EditText
-                android:id="@+id/edtx_usu_add_nombres"
+                android:id="@+id/usu_add_etx_nom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Nombres" />
@@ -57,8 +61,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@color/colorTextIcons"
-                android:src="@drawable/ic_icon_user" />
+                android:src="@drawable/ic_icon_user"
+                android:tint="@color/colorTextIcons" />
         </LinearLayout>
 
         <LinearLayout
@@ -68,7 +72,7 @@
             android:paddingRight="@dimen/padding_medium">
 
             <EditText
-                android:id="@+id/edtx_usu_add_apellidos"
+                android:id="@+id/usu_add_etx_ape"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Apellidos" />
@@ -93,8 +97,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@color/colorTextIcons"
-                android:src="@drawable/ic_icon_email_reg" />
+                android:src="@drawable/ic_icon_email_reg"
+                android:tint="@color/colorTextIcons" />
         </LinearLayout>
 
         <LinearLayout
@@ -104,7 +108,7 @@
             android:paddingRight="@dimen/padding_medium">
 
             <EditText
-                android:id="@+id/edtx_usu_add_email"
+                android:id="@+id/usu_add_etx_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="E-mail"
@@ -129,9 +133,9 @@
 
             <ImageView
                 android:layout_width="wrap_content"
-                android:tint="@color/colorTextIcons"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_icon_dni" />
+                android:src="@drawable/ic_icon_dni"
+                android:tint="@color/colorTextIcons" />
         </LinearLayout>
 
         <LinearLayout
@@ -141,7 +145,7 @@
             android:paddingRight="@dimen/padding_medium">
 
             <EditText
-                android:id="@+id/edtx_usu_add_dni_alumno"
+                android:id="@+id/usu_add_etx_dni_alum"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Dni del Alumno"
@@ -169,8 +173,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@color/colorTextIcons"
-                android:src="@drawable/ic_icon_password" />
+                android:src="@drawable/ic_icon_password"
+                android:tint="@color/colorTextIcons" />
         </LinearLayout>
 
         <LinearLayout
@@ -180,7 +184,7 @@
             android:paddingRight="@dimen/padding_medium">
 
             <EditText
-                android:id="@+id/edtx_usu_add_password"
+                android:id="@+id/usu_add_etx_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Password"
@@ -206,8 +210,8 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:tint="@color/colorTextIcons"
-                android:src="@drawable/ic_icon_password" />
+                android:src="@drawable/ic_icon_password"
+                android:tint="@color/colorTextIcons" />
         </LinearLayout>
 
         <LinearLayout
@@ -217,7 +221,7 @@
             android:paddingRight="@dimen/padding_medium">
 
             <EditText
-                android:id="@+id/edtx_usu_add_pass_conf"
+                android:id="@+id/usu_add_etx_pass_conf"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Confirmar Password"
@@ -232,7 +236,7 @@
         android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <Button
-            android:id="@+id/btn_usu_add_registarse"
+            android:id="@+id/usu_add_btn_reg"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/side_item_layout_componet_small"
