--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/dimens.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/dimens.xml
@@ -5,8 +5,12 @@
     <dimen name="paddTopBottomImg">16dp</dimen>
     <dimen name="dimenNomSistema">25sp</dimen>
     <dimen name="dimenNomPagina">20sp</dimen>
-    <dimen name="padding_medium">20sp</dimen>
-    <dimen name="padding_small">20sp</dimen>
-    <dimen name="padding_extra_small">20sp</dimen>
+    <dimen name="padding_large">12sp</dimen>
+    <dimen name="padding_extra_large">10sp</dimen>
+    <dimen name="padding_medium">8sp</dimen>
+    <dimen name="padding_extra_medium">6sp</dimen>
+    <dimen name="padding_small">4sp</dimen>
+    <dimen name="padding_extra_small">2sp</dimen>
 
 </resources>
+
