--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/colors.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#dadada</color>
     <color name="colorPrimaryDark">#b9b9b9</color>
+    <color name="colorPrimary">#dadada</color>
     <color name="colorPrimaryLight">#DCEDC8</color>
     <color name="colorTextIcons">#727272</color>
     <color name="colorAccent">#03A9F4</color>
     <color name="colorPrimaryText">#212121</color>
     <color name="colorSecondaryText">#757575</color>
-    <color name="black60">#a0000000</color>
+    <color name="color_black_60">#a0000000</color>
 </resources>
