aplicando el estandar los recursos

--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/fragment_usuario_add_dialog.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/fragment_usuario_add_dialog.xml
@@ -3,10 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/padding_extra_large"
-    android:paddingLeft="@dimen/padding_extra_large"
-    android:paddingRight="@dimen/padding_extra_large"
-    android:paddingTop="@dimen/padding_extra_large"
+    android:paddingBottom="@dimen/dimen_padding_extra_large"
+    android:paddingLeft="@dimen/dimen_padding_extra_large"
+    android:paddingRight="@dimen/dimen_padding_extra_large"
+    android:paddingTop="@dimen/dimen_padding_extra_large"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.UsuarioAddDialogFragment">
 
     <LinearLayout
@@ -17,15 +17,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/padding_extra_small"
+            android:layout_marginRight="@dimen/dimen_padding_extra_small"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/padding_small"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginBottom="@dimen/dimen_padding_small"
+                android:layout_marginTop="@dimen/dimen_padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -46,21 +46,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="@dimen/padding_medium">
+                    android:paddingRight="@dimen/dimen_padding_medium">
 
                     <EditText
                         android:id="@+id/usu_add_etx_nom"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Nombres" />
+                        android:hint="@string/hint_nombres_usuario" />
                 </LinearLayout>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/padding_small"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginBottom="@dimen/dimen_padding_small"
+                android:layout_marginTop="@dimen/dimen_padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -81,13 +81,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="@dimen/padding_medium">
+                    android:paddingRight="@dimen/dimen_padding_medium">
 
                     <EditText
                         android:id="@+id/usu_add_etx_email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="E-mail"
+                        android:hint="@string/hint_apellido_usuario"
                         android:inputType="textEmailAddress" />
                 </LinearLayout>
 
@@ -96,7 +96,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginTop="@dimen/dimen_padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -117,13 +117,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="@dimen/padding_medium">
+                    android:paddingRight="@dimen/dimen_padding_medium">
 
                     <EditText
                         android:id="@+id/usu_add_etx_pass"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Password"
+                        android:hint="@string/hint_password_usuario"
                         android:inputType="textPassword" />
                 </LinearLayout>
 
@@ -134,15 +134,15 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/padding_extra_small"
+            android:layout_marginLeft="@dimen/dimen_padding_extra_small"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/padding_small"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginBottom="@dimen/dimen_padding_small"
+                android:layout_marginTop="@dimen/dimen_padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -163,13 +163,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="@dimen/padding_medium">
+                    android:paddingRight="@dimen/dimen_padding_medium">
 
                     <EditText
                         android:id="@+id/usu_add_etx_ape"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Apellidos" />
+                        android:hint="@string/hint_apellido_usuario" />
                 </LinearLayout>
 
             </LinearLayout>
@@ -177,8 +177,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/padding_small"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginBottom="@dimen/dimen_padding_small"
+                android:layout_marginTop="@dimen/dimen_padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -199,13 +199,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="@dimen/padding_medium">
+                    android:paddingRight="@dimen/dimen_padding_medium">
 
                     <EditText
                         android:id="@+id/usu_add_etx_dni_alum"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Dni del Alumno"
+                        android:hint="@string/hint_dni_alumno"
                         android:inputType="numberSigned"
                         android:maxLength="8" />
                 </LinearLayout>
@@ -215,8 +215,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/padding_small"
-                android:layout_marginTop="@dimen/padding_small"
+                android:layout_marginBottom="@dimen/dimen_padding_small"
+                android:layout_marginTop="@dimen/dimen_padding_small"
                 android:background="@drawable/side_item_layout_componet_small"
                 android:orientation="horizontal">
 
@@ -237,13 +237,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:paddingRight="@dimen/padding_medium">
+                    android:paddingRight="@dimen/dimen_padding_medium">
 
                     <EditText
                         android:id="@+id/usu_add_etx_pass_conf"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Confirmar Password"
+                        android:hint="@string/hint_pass_conf"
                         android:inputType="textPassword" />
                 </LinearLayout>
 
@@ -257,7 +257,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/padding_medium">
+        android:layout_marginTop="@dimen/dimen_padding_medium">
 
         <Button
             android:id="@+id/usu_add_btn_reg"
@@ -265,7 +265,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/side_item_layout_componet_small"
             android:backgroundTint="@color/colorPrimaryDark"
-            android:text="Registrarse"
+            android:text="@string/name_button_registrar"
             android:textColor="@android:color/white" />
 
     </LinearLayout>
