--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout-land/activity_login.xml
@@ -52,7 +52,7 @@
             android:hint=" Ingrese usuario"
             android:paddingLeft="10dp"
             android:textColor="#EA3535"
-            android:textSize="16dp" />
+            android:textSize="16dp"/>
 
         <EditText
             android:id="@+id/log_etx_pass"
@@ -71,7 +71,8 @@
             android:layout_marginTop="3dp"
             android:buttonTint="#FF7408"
             android:text="Recordar usuario"
-            android:textColor="#8F2F0D" />
+            android:textColor="#8F2F0D"
+            android:id="@+id/log_chb_recUser" />
 
         <Button
             android:id="@+id/log_btn_entrar"
@@ -84,7 +85,7 @@
 
 
         <Button
-            android:id="@+id/log_tvi_reg"
+            android:id="@+id/log_btn_reg"
             android:layout_width="match_parent"
             android:layout_height="34dp"
             android:layout_marginTop="5dp"
@@ -97,7 +98,8 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:text="Olvidaste tu contraseña?"
-            android:textSize="12dp" />
+            android:textSize="12dp"
+            android:id="@+id/log_txv_recupPass" />
 
     </LinearLayout>
 
