--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,8 @@
         android:gravity="center"
         android:text="@string/name_sistema"
         android:textAlignment="center"
-        android:textColor="#900C3F" />
+        android:textColor="#900C3F"
+        android:textSize="13dp"/>
 
     <EditText
         android:id="@+id/log_etx_usu"
@@ -60,7 +61,8 @@
         android:text="Recordar usuario"
         android:layout_marginTop="5dp"
         android:textColor="#8F2F0D"
-        android:buttonTint="#FF7408"/>
+        android:buttonTint="#FF7408"
+        android:id="@+id/log_chb_recUser" />
 
     <Button
         android:id="@+id/log_btn_entrar"
@@ -73,7 +75,7 @@
 
 
     <Button
-        android:id="@+id/log_tvi_reg"
+        android:id="@+id/log_btn_reg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
@@ -88,6 +90,6 @@
         android:gravity="center"
         android:textSize="15dp"
         android:text="Olvidaste tu contraseña?"
-        />
+        android:id="@+id/log_txv_recupPass" />
 
 </LinearLayout>
