--- a/AppSGMonitoreoEstudiantil/app/src/main/res/menu/activity_main_drawer.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_alumno"
+            android:icon="@drawable/ic_icon_dni"
+            android:title="Alumnos" />
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
