--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/content_main.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/content_main.xml
@@ -13,4 +13,9 @@
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></FrameLayout>
+
 </RelativeLayout>
