--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_recycler_view.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/fragment_alumno_recycler_view.xml
@@ -4,10 +4,23 @@
     android:layout_height="match_parent"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.AlumnoRecyclerViewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+  <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="vertical">
+
+      <android.support.v4.widget.SwipeRefreshLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:id="@+id/alum_recv_swref">
+
+          <android.support.v7.widget.RecyclerView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:id="@+id/alum_recv_alumos"/>
+
+      </android.support.v4.widget.SwipeRefreshLayout>
+
+  </LinearLayout>
 
 </FrameLayout>
