--- a/AppSGMonitoreoEstudiantil/app/src/main/res/values/dimens.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/values/dimens.xml
@@ -11,7 +11,10 @@
     <dimen name="dimen_padding_extra_medium">6sp</dimen>
     <dimen name="dimen_padding_small">4sp</dimen>
     <dimen name="dimen_padding_extra_small">2sp</dimen>
+    <dimen name="dimen_radius_card_view">6dp</dimen>
+    <dimen name="dimen_elevation_card_view">6sp</dimen>
     <dimen name="dimen_radius_card_view_small">4dp</dimen>
+    <dimen name="dimen_elevation_card_view_small">4sp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
