--- a/AppSGMonitoreoEstudiantil/app/src/main/res/drawable/degradado.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/drawable/degradado.xml
@@ -4,6 +4,6 @@
         xmlns:android="http://schemas.android.com/apk/res/android">
         <gradient
             android:startColor="#EFEFBB"
-            android:endColor="#ECE9E6"
+            android:endColor="#D4D3DD"
             android:angle="270" />
     </shape>
