--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -9,8 +9,8 @@
     android:background="@drawable/degradado"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingLeft="30dp"
-    android:paddingRight="30dp"
+    android:paddingLeft="50dp"
+    android:paddingRight="50dp"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.LoginActivity">
 
     <ImageView
@@ -38,22 +38,24 @@
         android:layout_height="40dp"
         android:layout_marginBottom="10dp"
         android:background="@color/color_trans"
-        android:drawableStart="@drawable/ic_icon_user"
-        android:hint=" Ingrese usuario"
+        android:drawableLeft="@drawable/ic_icon_user"
+        android:hint="@string/hint_user"
         android:paddingLeft="10dp"
         android:textColor="#EA3535"
-        android:textSize="18dp"/>
+        android:textSize="18dp"
+        android:textAlignment="center"/>
 
     <EditText
         android:id="@+id/log_etx_pass"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/color_trans"
-        android:drawableStart="@drawable/ic_icon_password"
-        android:hint=" Ingrese password"
+        android:drawableLeft="@drawable/ic_icon_password"
+        android:hint="@string/hint_pass"
         android:paddingLeft="10dp"
         android:textColor="#EA3535"
-        android:textSize="18dp"/>
+        android:textSize="18dp"
+        android:textAlignment="center"/>
 
     <CheckBox
         android:layout_width="wrap_content"
