--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -6,92 +6,109 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/degradado"
+    android:background="#c0a288"
     android:gravity="center"
     android:orientation="vertical"
-    android:paddingLeft="50dp"
-    android:paddingRight="50dp"
+    android:padding="20dp"
     tools:context="pe.edu.sise.appsgmonitoreoestudiantil.LoginActivity">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        app:srcCompat="@drawable/ic_logo_monitoreo"
-        android:layout_marginTop="-25dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="15dp"
-        android:height="20dp"
+        android:layout_height="match_parent"
+        android:padding="20dp"
+        android:orientation="vertical"
         android:gravity="center"
-        android:text="@string/name_sistema"
-        android:textAlignment="center"
-        android:textColor="#900C3F"
-        android:textSize="13dp"/>
-
-    <EditText
-        android:id="@+id/log_etx_usu"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginBottom="10dp"
-        android:background="@color/color_trans"
-        android:drawableLeft="@drawable/ic_icon_user"
-        android:hint="@string/hint_user"
-        android:paddingLeft="10dp"
-        android:textColor="#EA3535"
-        android:textSize="18dp"
-        android:textAlignment="center"/>
-
-    <EditText
-        android:id="@+id/log_etx_pass"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:background="@color/color_trans"
-        android:drawableLeft="@drawable/ic_icon_password"
-        android:hint="@string/hint_pass"
-        android:paddingLeft="10dp"
-        android:textColor="#EA3535"
-        android:textSize="18dp"
-        android:textAlignment="center"/>
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Recordar usuario"
-        android:layout_marginTop="5dp"
-        android:textColor="#8F2F0D"
-        android:buttonTint="#FF7408"
-        android:id="@+id/log_chb_recUser" />
-
-    <Button
-        android:id="@+id/log_btn_entrar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Entrar"
-        android:background="#DE7653"
-        android:textColor="#fff"/>
+        android:backgroundTint="@color/color_trans"
+        android:background="@drawable/side_item_layout_componet_small"
+        >
 
 
-    <Button
-        android:id="@+id/log_btn_reg"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="Regitrarse"
-        android:background="#E0D8D6"
-        />
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            app:srcCompat="@drawable/ic_logo_monitoreo"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:textSize="15dp"
-        android:text="Olvidaste tu contraseña?"
-        android:id="@+id/log_txv_recupPass" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:height="20dp"
+            android:gravity="center"
+            android:text="@string/name_sistema"
+            android:textAlignment="center"
+            android:textColor="#900C3F"
+            android:textSize="13dp"/>
+
+        <EditText
+            android:id="@+id/log_etx_usu"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/side_item_layout_componet_small"
+            android:drawableLeft="@drawable/ic_icon_user"
+            android:backgroundTint="#ffffff"
+            android:hint="@string/hint_user"
+            android:paddingLeft="10dp"
+            android:textColor="#EA3535"
+            android:textSize="18dp"
+            android:textAlignment="center"/>
+
+        <EditText
+            android:id="@+id/log_etx_pass"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/side_item_layout_componet_small"
+            android:backgroundTint="#ffffff"
+            android:drawableLeft="@drawable/ic_icon_password"
+            android:hint="@string/hint_pass"
+            android:paddingLeft="10dp"
+            android:textColor="#EA3535"
+            android:textSize="18dp"
+            android:textAlignment="center"/>
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Recordar usuario"
+            android:layout_marginTop="5dp"
+            android:textColor="#8F2F0D"
+            android:buttonTint="#FF7408"
+            android:id="@+id/log_chb_recUser" />
+
+        <Button
+            android:id="@+id/log_btn_entrar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="Entrar"
+            android:background="@drawable/side_item_layout_componet_small"
+            android:backgroundTint="#DE7653"
+            android:textColor="#fff"/>
+
+
+        <Button
+            android:id="@+id/log_btn_reg"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="Regitrarse"
+            android:background="@drawable/side_item_layout_componet_small"
+            android:backgroundTint="#3d9cc1"
+            android:textColor="#fff"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:text="Olvidaste tu contraseña?"
+            android:id="@+id/log_txv_recupPass" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
