--- a/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
+++ b/AppSGMonitoreoEstudiantil/app/src/main/res/layout/activity_login.xml
@@ -50,6 +50,8 @@
             android:drawableLeft="@drawable/ic_icon_user"
             android:backgroundTint="#ffffff"
             android:hint="@string/hint_user"
+            android:imeOptions="actionNext"
+            android:inputType="text"
             android:paddingLeft="10dp"
             android:textColor="#EA3535"
             android:textSize="18dp"
@@ -66,6 +68,8 @@
             android:paddingLeft="10dp"
             android:textColor="#EA3535"
             android:textSize="18dp"
+            android:imeOptions="actionDone"
+            android:inputType="textPassword"
             android:textAlignment="center"/>
 
         <CheckBox
